# oneepis-local-agent

./: .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT_PLAN.md  GOVERNANCE.md
infra/: docker-compose.dev.yml
scripts/: launch-dev.cmd  launch-dev.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/agent/: brief.rs  context_pack.rs  evolution.rs  gates.rs  governance.rs  local_problems.rs  mod.rs  ollama.rs  patch.rs  persistence.rs  readiness.rs  repo.rs  runner.rs  safety.rs  training.rs  types.rs  work_package.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/lib/: api.ts  narrative.ts  plain-language.ts  types.ts
